[tool.poetry]
name = "fmeval"
version = "1.2.1"
description = "Amazon Foundation Model Evaluations"
license = "Apache License 2.0"
authors = ["Amazon FMEval Team <amazon-fmeval-team@amazon.com>"]
packages = [
    { include = "fmeval", from = "src" },
]
readme = "README.md"
classifiers=[
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.10"
urllib3 = ">=2.2.2"
semantic-version = "2.10.0"
pyarrow = "*"
pyfunctional = "1.4.3"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
matplotlib = "^3.8.3"
nltk = "^3.9.0"
markdown = "*"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
scikit-learn = "^1.3.1"
jiwer = "^3.0.3"
transformers = "^4.36.0"
sagemaker = "^2.225.0"
grpcio = "^1.60.0"
aiohttp = "^3.9.2"
datasets = "^3.1.0"
ray = "^2.38.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
fire = "*"
black = "24.3.0"
pre-commit = "3.3.3"
pytest = "*"
pytest-pspec = "*"
flake8 = "*"
mypy = "*"
lxml = "*"
commitizen = "*"
conventional-pre-commit = "*"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
mypy-boto3-bedrock = "^1.33.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"



[tool.poetry.group.test.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"
pytest-pspec = "^0.0.4"
testbook = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
